[gd_scene load_steps=8 format=3 uid="uid://bhfipsydwi0b2"]

[ext_resource type="Script" path="res://Game/Enemies/EnemyTypeScripts/EnemyType8v2.gd" id="1_2qpra"]
[ext_resource type="Texture2D" uid="uid://criqxgdwvallv" path="res://assets/trooper/Shower.png" id="2_1tud2"]
[ext_resource type="AudioStream" uid="uid://cj1imoycxevqm" path="res://assets/SoundEffects/hitHurt (1).wav" id="2_pcxbv"]

[sub_resource type="SpriteFrames" id="SpriteFrames_8bfe6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_1tud2")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_p6g2v"]
radius = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_1l2sv"]
radius = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_dcdo3"]
radius = 12.0

[node name="ShowerShooter" type="CharacterBody2D" groups=["Enemy"]]
script = ExtResource("1_2qpra")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.0744747, 0.0913035)
sprite_frames = SubResource("SpriteFrames_8bfe6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1.1, 1.1)
shape = SubResource("CircleShape2D_p6g2v")

[node name="ChangeDirection" type="Area2D" parent="." groups=["Enemy"]]
scale = Vector2(1.05, 1.05)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChangeDirection"]
shape = SubResource("CircleShape2D_1l2sv")

[node name="HitBox" type="Area2D" parent="." groups=["Enemy"]]
scale = Vector2(1.1, 1.1)
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CircleShape2D_dcdo3")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="Bounce" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_pcxbv")
bus = &"SoundFX"

[connection signal="area_entered" from="ChangeDirection" to="." method="_on_enemytype1_area_entered"]
[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_shoot_timer_timeout"]
